--- a/src/components/cards/cards.style.css
+++ b/src/components/cards/cards.style.css
@@ -6,9 +6,10 @@
 
 .latestPosts_cards {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 12px;
+  flex-wrap: wrap;
 }
 
 @media screen and (min-width: 768px) {
