--- a/src/components/moviesCards/moviesCards.style.css
+++ b/src/components/moviesCards/moviesCards.style.css
@@ -1,21 +1,17 @@
-.latestPosts_title {
-  margin-bottom: 24px;
-  font-weight: 600;
-  font-size: 1.5em;
+.movies {
+  @apply px-16
+}
+.movies_title {
+  @apply mb-6 font-semibold text-lg md:text-2xl;
+  
 }
 
-.latestPosts_cards {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 12px;
-  flex-wrap: wrap;
+.movies_cards {
+  @apply flex items-center justify-center gap-3 flex-wrap lg:justify-start;
+
 }
 
-@media screen and (min-width: 768px) {
-  .latestposts_cards {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
+.movies_moreLink {
+  @apply mt-3  inline-block  
 }
+
