--- a/src/components/moviesCards/moviesCards.style.css
+++ b/src/components/moviesCards/moviesCards.style.css
@@ -1,17 +1,14 @@
 .movies {
-  @apply px-16
+  @apply px-16;
 }
 .movies_title {
   @apply mb-6 font-semibold text-lg md:text-2xl;
-  
 }
 
 .movies_cards {
   @apply flex items-center justify-center gap-3 flex-wrap lg:justify-start;
-
 }
 
 .movies_moreLink {
-  @apply mt-3  inline-block  
+  @apply mt-3  inline-block;
 }
-
