--- a/src/components/movieCard/movieCard.style.css
+++ b/src/components/movieCard/movieCard.style.css
@@ -1,6 +1,6 @@
 .movieCard {
-  @apply flex gap-3 bg-white rounded-md md:p-0 md:flex-col md:justify-start md:gap-0
-          w-1/3 md:w-fit;
+  @apply flex gap-3 rounded-md md:p-0 md:flex-col md:justify-start md:gap-0  mb-5
+          /* w-1/5 md:w-1/5; */
 }
 
 .movieCard_image img {
