--- a/src/components/nav/nav.style.css
+++ b/src/components/nav/nav.style.css
@@ -1,5 +1,6 @@
 .topBar {
-  @apply flex justify-between md:justify-center gap-20 w-full items-start;
+  @apply flex justify-between md:justify-center gap-20 w-full items-start p-2 md:p-4;
+  background: #1b222a;
 }
 
 .logo {
@@ -12,7 +13,6 @@
 .nav {
   @apply flex flex-col md:flex-row  md:justify-between absolute inset-0 w-screen h-screen  
   md:relative md:bg-transparent md:w-full md:h-full px-5 md:px-0 z-10;
-  background: #14181c;
 }
 
 .nav_button {
